--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:hsqldb:file:c:/sysestoque/db/
-spring.datasource.username=SA
-spring.datasource.password=
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/estoquesimples
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
